components/examples/examples.less
// Examples
//
// A set of one or more linguistic examples. By convention, examples in linguistics publications are numbered (1), (2), (3), etc. To number the examples, wrap them in an `<ol class=examples>` tag, and place each example in a `<li class=ex>` element. All content within an example displays in a serif Unicode font by default; you may need to override the font family for individual elements. `<b>` and `<em>` tags within examples are styled with the `.em` class by default (see the [example emphasis](#kssref-components-emphasis) component).
//
// Markup: examples.html
//
// Styleguide components.examples
.exs, .examples {

  // --example-indent
  //
  // How far to indent each example. Controlling this value is useful when the number of examples on your page reaches multiple place values. Default: `1.5em`.
  //
  // Markup:
  // <ol class=examples style="counter-reset: examples 100;">
  //   <li class='ex A' style="--example-indent: 1.5em;">This is an example with <code>--example-indent</code> set to <code>1.5em</code>.</li>
  //   <li class='ex B' style="--example-indent: 2.5em;">This is an example with <code>--example-indent</code> set to <code>2.5em</code>.</li>
  // </ol>
  //
  // Styleguide components.examples.--example-indent
  --example-indent: 1.5em;

  // --example-margin
  //
  // How much spacing to place before and after each example in the list. Defaults to 1em.
  //
  // Styleguide components.examples.--example-margin
  --example-margin: 1em;

  list-style-type: none;

  .ex, .example {

    counter-increment  : examples;
    display            : list-item;
    margin-block       : var(--example-margin);
    margin-inline-start: var(--example-indent);
    position           : relative;

    &::before {
      content:             '(' counter(examples) ')';
      margin-inline-start: calc(var(--example-indent) * -1);
      margin-inline-end:   var(--example-indent);
      position:            absolute;
    }

  }

  .subexs, .subexamples {

    display            : inline-block;
    margin-inline-start: var(--example-indent);
    padding            : 0em;
    list-style-position: outside;
    list-style-type    : lower-alpha;
    vertical-align     : top;

    li {
      display: list-item;
    }

  }

}

